<resources>
    <string name="app_name">TodoListApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="chk_task1">Buy IPhone</string>
    <string name="chk_task2">Buy Android</string>
    <string name="chk_task3">Buy Windows Mobile</string>
    <string name="chk_task4">Buy Display</string>
    <string name="chk_task5">Buy Laptop</string>
    <string name="chk_task6">Sell both kidneys</string>
    <string name="add_task">Add Task</string>
    <string name="title_activity_add_task">Add a task</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
</resources>
